# backend/src/app/app.controller.ts
@@ -1,14 +1,11 @@
 import { Controller, Get, UseInterceptors } from "@nestjs/common";
 import { ApiOperation } from "@nestjs/swagger";
 import { ApiCommonOkResponse } from "../api-common-ok-response.decorator";
-import { AppService } from "./app.service";
 import { GetHelloResponse } from "./app.dto";
 import { CommonOkResponseInterceptor } from "../api-common-ok-response.interceptor";
 
 @Controller()
 export class AppController {
-	constructor(private readonly appService: AppService) {}
-
 	@Get()
 	@ApiOperation({
 		summary: "あいさつ取得",
@@ -17,15 +14,8 @@ export class AppController {
 	@ApiCommonOkResponse(GetHelloResponse, "object")
 	@UseInterceptors(CommonOkResponseInterceptor)
 	getHello(): GetHelloResponse {
-		return this.appService.getHello();
-	}
-
-	@Get("error")
-	@ApiOperation({
-		summary: "(強制エラー)",
-		description: "強制的にエラーを出力する。",
-	})
-	getError(): void {
-		this.appService.getError();
+		return {
+			message: "Hello World!",
+		};
 	}
 }
